--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
             <li><a href="https://scholar.google.com" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
             <li><a href="https://www.linkedin.com" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
             <li><a href="https://github.com" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
+            <li><a href="https://www.instagram.com/mregorin/" target="_blank"><img src="icons/instagram.png" alt="Instagram"></a></li>
+            <li><a href="https://www.youtube.com/@MrEgorin" target="_blank"><img src="icons/youtube.png" alt="YouTube"></a></li>
         </ul>
     </aside>
     <footer>
