--- a/index.html
+++ b/index.html
@@ -14,43 +14,20 @@
         <p data-lang="subtitle">AI Developer | Bioinformatics | Computational Biology</p>
     </header>
     <nav>
-        <ul>
-            <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank" data-lang="google">Google Scholar</a></li>
-            <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank" data-lang="linkedin">LinkedIn</a></li>
-            <li><a href="https://github.com/MrEgorin" target="_blank" data-lang="github">GitHub</a></li>
-            <li><a href="https://www.instagram.com/mregorin/" target="_blank" data-lang="instagram">Instagram</a></li>
-            <li><a href="https://www.youtube.com/@MrEgorin" target="_blank" data-lang="youtube">YouTube</a></li>
-        </ul>
-    </nav>
-    <div class="language-selector">
-        <select onchange="setLanguage(this.value)">
-            <option value="en">English</option>
-            <option value="de">Deutsch</option>
-        </select>
-    </div>
-    <main>
-        <section>
-            <h2 data-lang="about_title">About Me</h2>
-            <p data-lang="about_description">I specialize in artificial intelligence, bioinformatics, and molecular design. My experience includes:</p>
-            <ul>
-                <li><strong data-lang="ai">Artificial Intelligence:</strong> CS50 course in Python.</li>
-                <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> GeneXpert, RT-PCR, qPCR.</li>
-                <li><strong data-lang="genomics">Genome Editing:</strong> CRISPR/Cas, SnapGene.</li>
-                <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> GMP, drug development, cultivation of Dunaliella microalgae.</li>
-                <li><strong data-lang="programming">Programming:</strong> Python (Data Structures, AI).</li>
-            </ul>
-        </section>
-    </main>
-    <aside>
-        <h2>Connect with me:</h2>
-        <ul>
-            <li><a href="https://scholar.google.com" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
-            <li><a href="https://www.linkedin.com" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
-            <li><a href="https://github.com" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
+        <ul class="social-links">
+            <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
+            <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
+            <li><a href="https://github.com/MrEgorin" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
             <li><a href="https://www.instagram.com/mregorin/" target="_blank"><img src="icons/instagram.png" alt="Instagram"></a></li>
             <li><a href="https://www.youtube.com/@MrEgorin" target="_blank"><img src="icons/youtube.png" alt="YouTube"></a></li>
         </ul>
-    </aside>
+    </nav>
+    <main>
+        <section>
+            <h2 data-lang="about_title">About Me</h2>
+            <p data-lang="about_description">I specialize in artificial intelligence, bioinformatics, and molecular design.</p>
+        </section>
+    </main>
     <footer>
         <p>&copy; 2025 Yehor Franchuk</p>
     </footer>
