--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
     <main>
         <section>
             <h2 data-lang="about_title">About Me</h2>
-            <p data-lang="about_description">I specialize in artificial intelligence, bioinformatics, and molecular design.</p>
+            <p data-lang="about_description">I specialize in artificial intelligence, bioinformatics, and molecular design. My experience includes:</p>
+            <ul>
+                <li><strong data-lang="ai">Artificial Intelligence:</strong> CS50 course in Python.</li>
+                <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> GeneXpert, RT-PCR, qPCR.</li>
+                <li><strong data-lang="genomics">Genome Editing:</strong> CRISPR/Cas, SnapGene.</li>
+                <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> GMP, drug development, cultivation of Dunaliella microalgae.</li>
+                <li><strong data-lang="programming">Programming:</strong> Python (Data Structures, AI).</li>
+            </ul>
         </section>
     </main>
     <footer>
