--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Yehor Franchuk</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
+    <link rel="icon" href="dna-icon.png" type="image/x-icon"> 
 </head>
 <body>
     <header>
