--- a/index.html
+++ b/index.html
@@ -5,17 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yehor Franchuk</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script defer src="script.js"></script>
-    <link rel="icon" href="dna-icon.png" type="image/x-icon"> 
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="dna-icon.png" type="image/x-icon">
 </head>
 <body>
-    <header>
-        <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo">
+    <!-- Header -->
+    <header class="text-center p-4 bg-light">
+        <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
         <p data-lang="subtitle">AI Developer | Bioinformatics | Computational Biology</p>
     </header>
-    <nav>
-        <ul class="social-links">
+
+    <!-- Navigation -->
+    <nav class="bg-primary text-white p-3">
+        <ul class="social-links d-flex justify-content-center gap-3">
             <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
             <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
             <li><a href="https://github.com/MrEgorin" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
@@ -23,20 +26,62 @@
             <li><a href="https://www.youtube.com/@MrEgorin" target="_blank"><img src="icons/youtube.png" alt="YouTube"></a></li>
         </ul>
     </nav>
-    <main>
-        <section>
-            <h2 data-lang="about_title">About Me</h2>
-            <p data-lang="about_description">I specialize in artificial intelligence, bioinformatics, and molecular design. My experience includes:</p>
-            <ul>
-                <li><strong data-lang="ai">Artificial Intelligence:</strong> CS50 course in Python.</li>
-                <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> GeneXpert, RT-PCR, qPCR.</li>
-                <li><strong data-lang="genomics">Genome Editing:</strong> CRISPR/Cas, SnapGene.</li>
-                <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> GMP, drug development, cultivation of Dunaliella microalgae.</li>
-                <li><strong data-lang="programming">Programming:</strong> Python (Data Structures, AI).</li>
-            </ul>
+
+    <!-- Main Content -->
+    <main class="container mt-4">
+        <!-- About Section -->
+        <section class="mb-4">
+            <h2 data-lang="about_title" class="text-center mb-3">About Me</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6 text-center">
+                    <p data-lang="about_description">
+                        I specialize in artificial intelligence, bioinformatics, and molecular design. My experience includes:
+                    </p>
+                    <ul class="list-unstyled">
+                        <li><strong data-lang="ai">Artificial Intelligence:</strong> CS50 course in Python.</li>
+                        <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> GeneXpert, RT-PCR, qPCR.</li>
+                        <li><strong data-lang="genomics">Genome Editing:</strong> CRISPR/Cas, SnapGene.</li>
+                        <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> GMP, drug development, cultivation of Dunaliella microalgae.</li>
+                        <li><strong data-lang="programming">Programming:</strong> Python (Data Structures, AI).</li>
+                    </ul>
+                    <p>
+                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team of innovative scientists and developers.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+        <!-- Skills Section -->
+        <section class="mb-4">
+            <h2 data-lang="skills_title" class="text-center mb-3">Skills</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <ul class="list-unstyled">
+                        <li><strong>Programming Languages:</strong> Python, JavaScript</li>
+                        <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask</li>
+                        <li><strong>Software:</strong> SnapGene, Geneious</li>
+                        <li><strong>Technologies:</strong> Docker, Git, Linux</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Education Section -->
+        <section class="mb-4">
+            <h2 data-lang="education_title" class="text-center mb-3">Education</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <ul class="list-unstyled">
+                        <li><strong>Taras Shevchenko National University of Kyiv:</strong> Bachelor's Degree in Biotechnology</li>
+                        <li><strong>Harvard CS50:</strong> Introduction to Computer Science</li>
+                    </ul>
+                </div>
+            </div>
         </section>
     </main>
-    <footer>
+
+    <!-- Footer -->
+    <footer class="bg-dark text-white text-center py-3">
         <p>&copy; 2025 Yehor Franchuk</p>
     </footer>
 </body>
