--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="text-center p-4 bg-light">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">AI Developer | Bioinformatics | Computational Biology</p>
+        <p data-lang="subtitle">AI Developer | Bioinformatics Specialist | Computational Biologist | Pharmaceutical Biotechnologist</p>
     </header>
 
     <!-- Navigation -->
@@ -35,17 +35,17 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <p data-lang="about_description">
-                        I specialize in artificial intelligence, bioinformatics, and molecular design. My experience includes:
+                        I specialize in artificial intelligence, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans a wide range of fields, including genome editing, drug development, and computational biology.
                     </p>
                     <ul class="list-unstyled">
-                        <li><strong data-lang="ai">Artificial Intelligence:</strong> CS50 course in Python.</li>
-                        <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> GeneXpert, RT-PCR, qPCR.</li>
-                        <li><strong data-lang="genomics">Genome Editing:</strong> CRISPR/Cas, SnapGene.</li>
-                        <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> GMP, drug development, cultivation of Dunaliella microalgae.</li>
-                        <li><strong data-lang="programming">Programming:</strong> Python (Data Structures, AI).</li>
+                        <li><strong data-lang="ai">Artificial Intelligence:</strong> Completed the CS50 course in Python.</li>
+                        <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> Experienced with GeneXpert, RT-PCR, and qPCR technologies.</li>
+                        <li><strong data-lang="genomics">Genome Editing:</strong> Worked extensively with CRISPR/Cas systems and SnapGene software.</li>
+                        <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> Expertise in GMP standards, drug development processes, cultivation of Dunaliella microalgae, and wound treatment studies in Wistar rats.</li>
+                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, and SQL.</li>
                     </ul>
                     <p>
-                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team of innovative scientists and developers.
+                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team of innovative scientists and developers, driving advancements in biotechnology through cutting-edge research and development.
                     </p>
                 </div>
             </div>
@@ -57,7 +57,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
-                        <li><strong>Programming Languages:</strong> Python, JavaScript</li>
+                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, SQL</li>
                         <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask</li>
                         <li><strong>Software:</strong> SnapGene, Geneious</li>
                         <li><strong>Technologies:</strong> Docker, Git, Linux</li>
@@ -72,8 +72,9 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
-                        <li><strong>Taras Shevchenko National University of Kyiv:</strong> Bachelor's Degree in Biotechnology</li>
-                        <li><strong>Harvard CS50:</strong> Introduction to Computer Science</li>
+                        <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> Bachelor's Degree in Pharmaceutical Biotechnology</li>
+                        <li><strong>Taras Shevchenko National University of Kyiv:</strong> Master's Degree in Bioinformatics and Structural Biology (in progress)</li>
+                        <li><strong>Harvard CS50:</strong> Introduction to Computer Science, WEB developing, AI with Python</li>
                     </ul>
                 </div>
             </div>
