--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center p-4 bg-light">
+    <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
         <p data-lang="subtitle">AI Developer | Bioinformatics Specialist | Computational Biologist | Pharmaceutical Biotechnologist</p>
     </header>
 
     <!-- Navigation -->
-    <nav class="bg-primary text-white p-3">
-        <ul class="social-links d-flex justify-content-center gap-3">
+    <nav class="bg-primary text-white">
+        <ul class="social-links">
             <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
             <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
             <li><a href="https://github.com/MrEgorin" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
@@ -31,7 +31,7 @@
     <main class="container mt-4">
         <!-- About Section -->
         <section class="mb-4">
-            <h2 data-lang="about_title" class="text-center mb-3">About Me</h2>
+            <h2 data-lang="about_title" class="text-center">About Me</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <p data-lang="about_description">
@@ -53,7 +53,7 @@
 
         <!-- Skills Section -->
         <section class="mb-4">
-            <h2 data-lang="skills_title" class="text-center mb-3">Skills</h2>
+            <h2 data-lang="skills_title" class="text-center">Skills</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
@@ -68,7 +68,7 @@
 
         <!-- Education Section -->
         <section class="mb-4">
-            <h2 data-lang="education_title" class="text-center mb-3">Education</h2>
+            <h2 data-lang="education_title" class="text-center">Education</h2>
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
@@ -82,7 +82,7 @@
     </main>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
+    <footer class="bg-dark text-white text-center">
         <p>&copy; 2025 Yehor Franchuk</p>
     </footer>
 </body>
