--- a/yid.html
+++ b/yid.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="text-center p-4 bg-light">
+    <header class="text-center p-4 bg">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
         <p data-lang="subtitle">Founder & CEO of YID</p>
