--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> Experienced with GeneXpert, RT-PCR, and qPCR technologies.</li>
                         <li><strong data-lang="genomics">Genome Editing:</strong> Worked extensively with CRISPR/Cas systems and SnapGene software.</li>
                         <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> Expertise in GMP standards, drug development processes, cultivation of Dunaliella microalgae, and wound treatment studies in Wistar rats.</li>
-                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, and SQL.</li>
+                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, CSS and SQL.</li>
                     </ul>
                     <p>
                         As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team of innovative scientists and developers, driving advancements in biotechnology through cutting-edge research and development.
@@ -57,7 +57,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
-                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, SQL</li>
+                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, CSS, SQL</li>
                         <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask</li>
                         <li><strong>Software:</strong> SnapGene, Geneious</li>
                         <li><strong>Technologies:</strong> Docker, Git, Linux</li>
