--- a/index.html
+++ b/index.html
@@ -18,13 +18,21 @@
 
     <!-- Navigation -->
     <nav class="bg-primary text-white">
-        <ul class="social-links">
-            <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
-            <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
-            <li><a href="https://github.com/MrEgorin" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
-            <li><a href="https://www.instagram.com/mregorin/" target="_blank"><img src="icons/instagram.png" alt="Instagram"></a></li>
-            <li><a href="https://www.youtube.com/@MrEgorin" target="_blank"><img src="icons/youtube.png" alt="YouTube"></a></li>
-        </ul>
+        <div class="nav-container">
+            <button class="burger-menu" aria-label="Toggle menu">☰</button>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="yid.html">YID</a></li>
+                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+            </ul>
+            <ul class="social-links">
+                <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
+                <li><a href="https://www.linkedin.com/in/mregorin/" target="_blank"><img src="icons/linkedin.png" alt="LinkedIn"></a></li>
+                <li><a href="https://github.com/MrEgorin" target="_blank"><img src="icons/github.png" alt="GitHub"></a></li>
+                <li><a href="https://www.instagram.com/mregorin/" target="_blank"><img src="icons/instagram.png" alt="Instagram"></a></li>
+                <li><a href="https://www.youtube.com/@MrEgorin" target="_blank"><img src="icons/youtube.png" alt="YouTube"></a></li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Main Content -->
@@ -35,17 +43,17 @@
             <div class="row justify-content-center">
                 <div class="col-md-6 text-center">
                     <p data-lang="about_description">
-                        I specialize in artificial intelligence, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans a wide range of fields, including genome editing, drug development, and computational biology.
+                        I specialize in artificial intelligence, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans genome editing, drug development, and computational biology, with a focus on advancing biotechnology through innovative research.
                     </p>
                     <ul class="list-unstyled">
-                        <li><strong data-lang="ai">Artificial Intelligence:</strong> Completed the CS50 course in Python.</li>
+                        <li><strong data-lang="ai">Artificial Intelligence:</strong> Completed the CS50 course in Python, AI with Python, and web development.</li>
                         <li><strong data-lang="diagnostics">Molecular Diagnostics:</strong> Experienced with GeneXpert, RT-PCR, and qPCR technologies.</li>
-                        <li><strong data-lang="genomics">Genome Editing:</strong> Worked extensively with CRISPR/Cas systems and SnapGene software.</li>
-                        <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> Expertise in GMP standards, drug development processes, cultivation of Dunaliella microalgae, and wound treatment studies in Wistar rats.</li>
-                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, CSS and SQL.</li>
+                        <li><strong data-lang="genomics">Genome Editing:</strong> Extensive work with CRISPR/Cas systems and SnapGene software.</li>
+                        <li><strong data-lang="pharma">Pharmaceutical Technologies:</strong> Expertise in GMP standards, drug development, cultivation of Dunaliella microalgae, and wound treatment studies in Wistar rats.</li>
+                        <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, CSS, and SQL.</li>
                     </ul>
                     <p>
-                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team of innovative scientists and developers, driving advancements in biotechnology through cutting-edge research and development.
+                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
                     </p>
                 </div>
             </div>
@@ -57,10 +65,11 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
-                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, CSS, SQL</li>
-                        <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask</li>
-                        <li><strong>Software:</strong> SnapGene, Geneious</li>
-                        <li><strong>Technologies:</strong> Docker, Git, Linux</li>
+                        <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, CSS, SQL, R (box-and-whiskers plot), Bash</li>
+                        <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask, Django, Git, BitBucket</li>
+                        <li><strong>Bioinformatics Software:</strong> SnapGene, Geneious, BLAST, Clustal, Mega, CHOP-CHOP, Schrödinger, MOE</li>
+                        <li><strong>Technologies:</strong> Docker, Linux, NGS data analysis (Illumina data)</li>
+                        <li><strong>Laboratory:</strong> Cultivation of unicellular microalgae, animal handling, excisional wound modeling, microscopy, image processing, data analysis, basic immunological and hematological assays, rational protein engineering, CRISPR gRNA design</li>
                     </ul>
                 </div>
             </div>
@@ -72,10 +81,36 @@
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <ul class="list-unstyled">
-                        <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> Bachelor's Degree in Pharmaceutical Biotechnology</li>
-                        <li><strong>Taras Shevchenko National University of Kyiv:</strong> Master's Degree in Bioinformatics and Structural Biology (in progress)</li>
-                        <li><strong>Harvard CS50:</strong> Introduction to Computer Science, WEB developing, AI with Python</li>
+                        <li><strong>Taras Shevchenko National University of Kyiv:</strong> MSc in Biology and Biochemistry, Specialization: Bioinformatics and Structural Biology (2024 – Present)</li>
+                        <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> BSc in Biotechnology and Bioengineering, Specialization: Pharmaceutical Biotechnology (2020 – 2024, Graduated with Distinction)</li>
+                        <li><strong>Harvard CS50:</strong> Introduction to Computer Science, Web Development, AI with Python</li>
+                        <li><strong>Kharkiv Secondary School №145:</strong> Graduated with Distinction (Gold Medal, 2020)</li>
                     </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Research Experience -->
+        <section class="mb-4">
+            <h2 class="text-center">Research Experience</h2>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <ul class="list-unstyled">
+                        <li><strong>V.N. Karazin Kharkiv National University, Institute of Biology:</strong> Research Assistant (Aug 2023 – Jun 2024) - Excisional wound healing in Wistar rats</li>
+                        <li><strong>Institute of General and Emergency Surgery named after V.T. Zaitsev:</strong> Laboratory Intern (Feb 2023 – Aug 2023) - Post-COVID syndrome inflammation studies</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <!-- Photos -->
+        <section class="photo-gallery mb-4">
+            <div class="row justify-content-center">
+                <div class="col-md-3 text-center">
+                    <img src="3.png" alt="Research Photo 1" class="gallery-photo">
+                </div>
+                <div class="col-md-3 text-center">
+                    <img src="4.png" alt="Research Photo 2" class="gallery-photo">
                 </div>
             </div>
         </section>
@@ -83,7 +118,9 @@
 
     <!-- Footer -->
     <footer class="bg-dark text-white text-center">
-        <p>&copy; 2025 Yehor Franchuk</p>
+        <p>© 2025 Yehor Franchuk</p>
     </footer>
+
+    <script src="scripts.js"></script>
 </body>
 </html>
