--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                 <div class="col-md-3 text-center">
                     <img src="4.png" alt="Research Photo 2" class="gallery-photo">
                 </div>
+                <div class="col-md-3 text-center">
+                    <img src="5.png" alt="Research Photo 3" class="gallery-photo">
+                </div>
             </div>
         </section>
     </main>
