--- a/index.html
+++ b/index.html
@@ -36,15 +36,12 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="container mt-3">
+    <main class="container mt-4">
         <!-- About Section -->
-        <section class="mb-3">
+        <section class="mb-4">
             <h2 data-lang="about_title" class="text-center">About Me</h2>
             <div class="row justify-content-center">
-                <div class="col-md-4 text-center">
-                    <img src="3.png" alt="Research Photo 1" class="inline-photo">
-                </div>
-                <div class="col-md-4 text-center">
+                <div class="col-md-6 text-center">
                     <p data-lang="about_description">
                         I specialize in artificial intelligence, bioinformatics, pharmaceutical biotechnology, and molecular design. My expertise spans genome editing, drug development, and computational biology, with a focus on advancing biotechnology through innovative research.
                     </p>
@@ -59,17 +56,14 @@
                         As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
                     </p>
                 </div>
-                <div class="col-md-4 text-center">
-                    <img src="4.png" alt="Research Photo 2" class="inline-photo">
-                </div>
             </div>
         </section>
 
         <!-- Skills Section -->
-        <section class="mb-3">
+        <section class="mb-4">
             <h2 data-lang="skills_title" class="text-center">Skills</h2>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <ul class="list-unstyled">
                         <li><strong>Programming Languages:</strong> Python, JavaScript, C++, HTML, CSS, SQL, R (box-and-whiskers plot), Bash</li>
                         <li><strong>Tools & Frameworks:</strong> TensorFlow, PyTorch, Flask, Django, Git, BitBucket</li>
@@ -82,10 +76,10 @@
         </section>
 
         <!-- Education Section -->
-        <section class="mb-3">
+        <section class="mb-4">
             <h2 data-lang="education_title" class="text-center">Education</h2>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <ul class="list-unstyled">
                         <li><strong>Taras Shevchenko National University of Kyiv:</strong> MSc in Biology and Biochemistry, Specialization: Bioinformatics and Structural Biology (2024 – Present)</li>
                         <li><strong>National Technical University "Kharkiv Polytechnic Institute":</strong> BSc in Biotechnology and Bioengineering, Specialization: Pharmaceutical Biotechnology (2020 – 2024, Graduated with Distinction)</li>
@@ -97,10 +91,10 @@
         </section>
 
         <!-- Research Experience -->
-        <section class="mb-3">
+        <section class="mb-4">
             <h2 class="text-center">Research Experience</h2>
             <div class="row justify-content-center">
-                <div class="col-md-12">
+                <div class="col-md-6">
                     <ul class="list-unstyled">
                         <li><strong>V.N. Karazin Kharkiv National University, Institute of Biology:</strong> Research Assistant (Aug 2023 – Jun 2024) - Excisional wound healing in Wistar rats</li>
                         <li><strong>Institute of General and Emergency Surgery named after V.T. Zaitsev:</strong> Laboratory Intern (Feb 2023 – Aug 2023) - Post-COVID syndrome inflammation studies</li>
@@ -111,10 +105,16 @@
     </main>
 
     <!-- Photos at the bottom -->
-    <section class="photo-gallery mb-3">
+    <section class="photo-gallery mb-4">
         <div class="row justify-content-center">
             <div class="col-md-3 text-center">
-                <img src="5.png" alt="Research Photo 3" class="gallery-photo">
+                <img src="3.png" alt="Research Photo 1" class="gallery-photo">
+            </div>
+            <div class="col-md-3 text-center">
+                <img src="4.png" alt="Research Photo 2" class="gallery-photo">
+            </div>
+            <div class="col-md-3 text-center">
+                <img src="5.png" alt="Research Photo 3" class="gallery-photo larger">
             </div>
         </div>
     </section>
