--- a/yid.html
+++ b/yid.html
@@ -36,50 +36,50 @@
     </nav>
 
     <!-- Main Content -->
-    <main class="container mt-4">
-        <section class="mb-4">
+    <main class="container mt-3">
+        <section class="mb-3">
             <h2 class="text-center mb-3">YID - About the Company</h2>
             <div class="row justify-content-center">
-                <div class="col-md-6 text-center">
+                <div class="col-md-4 text-center">
+                    <img src="1.png" alt="YID Photo 1" class="inline-photo">
+                </div>
+                <div class="col-md-4 text-center">
                     <p>
                         YID is a cutting-edge biotechnology company founded by Yehor Franchuk. Our mission is to revolutionize biotechnology through AI, bioinformatics, and computational biology.
                     </p>
-                    <h3 class="mt-4">Our Mission</h3>
+                    <h3 class="mt-3">Our Mission</h3>
                     <p>
                         We aim to advance personalized medicine and biotech innovation by leveraging AI, genomics, drug discovery, and protein engineering.
                     </p>
-                    <h3 class="mt-4">Key Achievements</h3>
+                    <h3 class="mt-3">Key Achievements</h3>
                     <ul class="list-unstyled">
                         <li><strong>CRISPR-Cas9 Technologies:</strong> Precision genome editing tools.</li>
                         <li><strong>Drug Design:</strong> Machine learning for drug discovery.</li>
                         <li><strong>Multi-Omics Analysis:</strong> Personalized medicine solutions.</li>
                     </ul>
-                    <h3 class="mt-4">Team Leadership</h3>
+                    <h3 class="mt-3">Team Leadership</h3>
                     <p>
                         As founder and CEO, I lead a team of experts in AI, bioinformatics, and molecular biology, driving innovation in biotechnology.
                     </p>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img src="2.png" alt="YID Photo 2" class="inline-photo">
                 </div>
             </div>
         </section>
     </main>
 
     <!-- Photos at the bottom -->
-    <section class="photo-gallery mb-4">
+    <section class="photo-gallery mb-3">
         <div class="row justify-content-center">
             <div class="col-md-3 text-center">
-                <img src="1.png" alt="YID Photo 1" class="gallery-photo">
-            </div>
-            <div class="col-md-3 text-center">
-                <img src="2.png" alt="YID Photo 2" class="gallery-photo">
-            </div>
-            <div class="col-md-3 text-center">
-                <img src="5.png" alt="Research Photo 3" class="gallery-photo larger">
+                <img src="5.png" alt="Research Photo 3" class="gallery-photo">
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center">
+    <footer class="bg-dark text-white text-center py-3">
         <p>© 2025 Yehor Franchuk</p>
     </footer>
 
