--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
 </head>
 <body>
+    <!-- Top Right PDB Visualizer Button -->
+    <div class="pdb-visualizer-container">
+        <a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="pdb-button">
+            PDB Visualizer
+        </a>
+    </div>
+
     <!-- Header -->
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
@@ -21,9 +28,10 @@
         <div class="nav-container">
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="yid.html">YID</a></li>
+                <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
+                <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
                 <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+                <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
@@ -56,7 +64,7 @@
                         <li><strong data-lang="programming">Programming:</strong> Proficient in Python (data structures, AI), C++, JavaScript, HTML, CSS, and SQL.</li>
                     </ul>
                     <p>
-                        As the founder and CEO of <a href="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
+                        As the founder and CEO of <a href="#" data-page="yid.html" class="text-primary">YID</a>, I lead a team driving advancements in biotechnology through cutting-edge research and development.
                     </p>
                 </div>
                 <div class="col-md-4 text-center">
