--- a/index.html
+++ b/index.html
@@ -9,13 +9,6 @@
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
 </head>
 <body>
-    <!-- Top Right PDB Visualizer Button -->
-    <div class="pdb-visualizer-container">
-        <a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="pdb-button">
-            PDB Visualizer
-        </a>
-    </div>
-
     <!-- Header -->
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
@@ -32,6 +25,7 @@
                 <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
                 <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
+                <li><a href="https://group1.gcs-camp-conference.org/pdb_viewer/" target="_blank" class="pdb-button">PDB Viewer</a></li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
